moved websocket watcher to netty class